gb-91 fixed overflow issue

--- a/components/container/Container.module.scss
+++ b/components/container/Container.module.scss
@@ -12,6 +12,7 @@
 
 .contentContainer {
   width: 100%;
+  overflow-x: hidden;
 }
 
 .heading {
